# PokerRanges

./: .clang-tidy  CMakeLists.txt
src/example/: main.cpp
src/poker/: RangeItemDelegate.cpp  RangeItemDelegate.h  RangeTableModel.cpp  RangeTableModel.h  RangeWidget.cpp  RangeWidget.h  main.cpp
src/range/: Card.cpp  Card.h  Cluster.cpp  Cluster.h  Hand.cpp  Hand.h  Range.cpp  Range.h  RangeManager.cpp  RangeManager.h
